added: favorite docs
